! couple of button alignment issues

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -3263,9 +3263,6 @@ div.labels {
 #calendar_navigation .buttonlist {
 	padding: 0 6px;
 }
-#calendar_navigation select {
-	margin-top: 2px;
-}
 /* See, I told you there was deranged wombatz here. */
 /*
 			   ,.--""""--.._
